--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body{
-    min-width: 1440px;
     font-family: 'GraphikLCG';
-    width: 1440px;
+    overflow-x:hidden;
 }
 ul a{
     text-decoration: none;
@@ -9,31 +8,48 @@ ul a{
 li{
     list-style-type: none;
 }
-ul .list{
-    display: inline-block;
-    margin-right: 50px;
-}
+
+
+
+
+
 .header-list{
-    margin-left: 190px;
+    width: 600px;
+    display: flex;
+    justify-content: space-around;
+    margin-right: auto;
+    margin-left: auto;
+    
 }
 .lokalise{
-    position: relative;
-    
+    position: relative; 
 }
 .lokalise:before{
     content:url('img/Group\ \(1\).png');
     position: absolute;
-    margin-left: -170px; 
-    margin-top: -5px;
+    right: 140px; 
+    top: -5px;
 }
+.header{
+    height: 100px;
+    display: flex;
+    margin: 0 auto;
+    align-items: center;
+}
+.header-btns{
+    width: 260px;
+    margin-left: auto;
+    display: flex; 
+    justify-content: flex-end; 
+} 
+
+
+
 .list a{
     color: black;
 }
-.header{
-    max-height: 140px;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
+.linia{
+    border-bottom: 1px rgb(197, 194, 194) solid;
 }
 button{
     font-weight: 600;
@@ -43,18 +59,32 @@ button{
 .try{
     background-color: #FF6336;
     color: white;
+    margin-right: auto;
+    margin-left: auto;
 }
 .btn{
-    margin: 25px auto 25px 10px;
     height: 45px;
     width: 120px;
 }
-.btns:last-child{
-    margin-right: 50px;
-}
+
+
+
+
 .conteiner{
     display: flex;
-    justify-content: space-between; 
+    flex-wrap: wrap;
+    justify-content: space-around; 
+    height: 860px;
+    display: flex;
+    margin: 0 auto;
+    align-items: center;
+}
+.content{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: space-between;
+    gap:50px;
 }
 .free{
     width: 160px;
@@ -65,21 +95,15 @@ button{
 .book{
     width: 160px;
     height: 60px;
-    
 }
-.conteiner{
-margin: 130px 75px 180px ;
-}
-h1{
-    margin: 0 auto 50px 0;
-    height: 210px;
+.cnt-item{
+    /* height: 210px; */
     width: 552px;
     font-size: 65px;
     font-weight: 600;
     line-height: 70px;
 }
-.text{
-    height: 140px;
+.cnt-text{
     width: 470px;
     font-size: 25px;
 }
@@ -90,33 +114,46 @@ h1{
     width: 760px;
     height: 530px;
 }
+
+
+
+
 .bg-ye{
-    height: 455px;
+    height: 350px;
     background-color: #FF9C7D;
+    padding-top: 100px;
+    
+
 }
-.item-brand{  
-    display: flex;
-    justify-content: center;
-}
-h2{
-    margin: 108px auto 70px;
+.item-brand p{  
     width: 720px;
     font-size: 50px;
     font-weight: 600;
-    display: flex;
-    justify-content: center;
 }
-.brand{
-    display: flex;
-    justify-content: center;    
+.item-brand{
+    display: flex; 
+    justify-content:center;
+    height: 200px;  
+    align-self: center;
+    
+    
 }
-.brand li{
-    margin-right: 103px;
+.brand { 
+    display: flex; 
+    justify-content: space-around;
+    
 }
-h3{
+
+
+
+
+
+
+.cart-item{
     font-weight: 600;
     font-size: 50px;
     width: 379px;
+    line-height:60px
 }
 
 .link{
@@ -127,97 +164,128 @@ p a{
     text-decoration: none;
     color: black;
 }
-.picture{
-    width: 632px;
-    height:632px;
-}
-.card-story{
-    width: 660px;
-    margin-top: 140px;
-}
-.cards{
-    margin-top: 90px;
+
+
+
+
+.container-story{
+    padding-top: 90px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
+    padding-bottom: 100px;
 }
-.cards > div:nth-child(n+3){
-margin-top:250px;
+
+.card-story{
+    display: flex;
+    flex-direction: column;
+    line-height:70px;
+    align-self:center;
+    height: 100%;
 }
+.card-picture{
+    height: 632px;
+    width: 632px;
+}
+
+
+
 .line{
     text-decoration: underline;
 }
-h3:first-child{
+.cart-item{
     width: 500px;
+    
 }
 .story{
     font-size: 20px;
-    width: 540px;
+    width: 500px;
     line-height: 30px;
 }
-.story:first-child{
-    width: 500px;
-}
-.story:nth-child(2){
-    width: 450px;
+
+
+
+
+
+
+
+.bg-lightye{
+    padding-top: 120px;
+    min-height: 1053px;
+    max-height: 2500px;
+    background-color: #FFF8E4;
+    padding-bottom: 70px;
 }
 .item-icon{
     display: flex;
     justify-content: center;
     font-weight: 600;
     font-size: 50px;
-    padding-top: 120px;
 }  
-.bg-lightye{
-    height: 1053px;
-    background-color: #FFF8E4;
-    margin-bottom: 70px;
+.block {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin:0 auto;
+    padding-top: 150px;
+    
 }
-h4{
+.block-icon {
+    width: 330px;
+    height: 294px;
+}
+.block-icon div{
+    text-align: center; 
+}
+
+.block-item{
     font-weight: 600;
     font-size: 25px;
     line-height: 35px;
     text-align: center; 
 }
-.block-icon {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-.block {
-    width: 330px;
-    height: 294px;
-    margin:57px 55px 20px;
-}
 .icon {
     width: 160px;
     height: 120px;
-    margin-left: 85px; 
+
 }
 .block-text {
     font-size: 18px;
     line-height: 25px;
     text-align: center;
 }
+
+
+
+
+
+.bg-wh{
+    padding-top: 150px ;
+    padding-bottom: 70px;
+}
 .box-item {
     font-size: 50px;
     font-weight: 600;
     line-height: 40px;
     text-align: center;
-    margin:150px auto 70px;
+    
 }
 .boxs {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 150px;
 }
 .box {
     width: 410px;
-    margin:10px 0 150px 15px;
+    margin:0 auto;
 }
 .box-img {
     height: 185px;
-    width: 175px;
-    margin-bottom: 20px;
+    width: 190px;
+    /* margin-bottom: 20px; */
 }
 .box-list{
     font-size: 30px;
@@ -235,14 +303,19 @@ h4{
 .box-link a{
     text-decoration: underline;
 }
+
+
+
+
+
 .bg-bl{
     background-color: #C9E8F2;
     display: flex;
     height: 470px;
     justify-content: space-around;
+    align-items: center;
 }
 .bl-text {
-    margin-top: 43px;
     font-size: 30px;
     width: 920px;
     line-height: 40px;
@@ -250,21 +323,25 @@ h4{
 .bl-name {
     font-size: 15px;
 }
-.photo {
-    margin-top: 53px;
-}
 .photo img{
     height: 310px;
     width: 310px;
 }
+
+
+
+
+
 .bg-br{
     background-color: #DABC98;
-    height: 332px;   
+    height: 332px; 
+    
 }
 .br-cake{
     display: flex;
     justify-content: space-around;
-    padding-top: 90px;
+    align-items: center;
+    height: 100%;
 }
 .bg-br p{
     font-size: 35px;
@@ -279,54 +356,67 @@ h4{
     width: 481px;
     height: 168px;
 }
+
+
+
+
+.bird{
+    margin:0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 1100px;
+    gap: 20px;
+    justify-content: center;
+}
 .bird-item{
     font-size: 65px;
     font-weight: 600px;
     line-height: 75px;
     width: 791px;
     text-align: center;
-    margin:160px auto 0;
 }
 .bird-text{
     font-size: 25px;
     line-height: 30px;
     width: 539px;
-    margin:10px auto 0;
+    text-align: center;
 }
 .bird-img img{
     height: 445px;
     width: 1023px;
-    display: block;
-    margin:10px auto 0;
 }
 .btn-bird{
     color:white;
     background-color: #FF6336;
     width: 193px;
     height: 60px;
-    display: block;
-    margin:20px auto 150px;
 }
+
+
+
+
 .bg-peach {
     background-color: #FF9C7D;
     height: 603px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
 }
 .peach-item {
     font-size: 65px;
     font-weight: 600;
     line-height: 75px;
-    display: block;
     margin: 0 auto;
-    padding: 120px 10px 10px 10px;
     width: 784px;
     text-align: center;
 }
 .peach-text {
     font-size: 20px;
     line-height: 30px;
-    display: block;
-    margin: 0 auto;
-    padding: 10px;
     text-align: center;
 }
 .peach-btn {
@@ -338,90 +428,101 @@ h4{
     border: 1px black solid;
     width: 160px;
     height: 60px;
-    display: block;
-    margin: 50px auto 160px;
 }
 button a{
     text-decoration: none;
     color: inherit;
 }
+
+
+
 .bg-footer {
+    padding-top: 95px;
     padding-bottom: 80px;
     display: flex;
     justify-content: space-around;
-    align-items: flex-start;
     flex-wrap: wrap;
-    margin-top: 100px;
+    flex-wrap: wrap;
+    margin: 0 auto; 
 } 
-.footer-list li{
-    display: flex;
+.footer-content li{
+    font-size: 15px;
+    line-height: 15px;
+    
 }
-.footer-list ul{
-    display: inline-block; 
-}
-.footer-content img{
-    display: block;
-} 
 .content-item{
     font-weight: 600;
     font-size: 40px;
     line-height: 50px;
 }
 .content-picture{
-height: 300px;
-width: 300px;
-}
-.content-logo{
-    margin-top: 20px;
-    height: 32px;
-    width: 80px;
-}
-.content-text{
-    width: 290px;
-    font-size: 20px;
-    line-height: 30px;
-}
-.content-link{
-    font-size: 20px;
-    font-weight: 600;
-}
-.footer-list li{
-    font-size: 15px;
-    line-height: 15px;
-    margin-bottom: 15px;
-}
-.footer-list li:first-child{
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 20px;
-    margin-top: 58px;
-}
+    height: 300px;
+    width: 300px;
+    } 
+    .content-logo{ 
+        margin-top: 20px; 
+        height: 32px;
+        width: 80px;
+    } 
+    .content-text{
+        width: 290px;
+        font-size: 20px;
+        line-height: 30px;
+    }
+    .content-link{
+        font-size: 20px;
+        font-weight: 600;
+    }
+    .fr-list{
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 25px;
+    }
+    .footer-list{
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        flex-wrap: wrap;
+    }
+    
+
+
+
+
+
+
+
 .ft{
 display: flex;
-justify-content: space-between;
-margin: 40px 0 20px;
+width: 100%;
+justify-content: space-around;  
+margin-left: auto; 
+margin-right: auto; 
+padding-bottom: 40px;
+padding-top: 50px;
 }
-.ft-logo{
-    width: 90px;
-    height: 20px;
-}
+
 .ft-text{
     width: 300px;
     font-size: 12px;
     line-height: 15px;
     position: relative;
-    left: 100px;
 }
 .ft-text::before{
     content:url('img/Group (6).png') ;
     position: absolute;
-    margin-left: -100px; 
+    left: -120px; 
 }
 .ft-year p{
     width: 109px;
     font-size: 12px;
     line-height: 15px;
 }
-.ft-year{
-    display: block;
+
+
+
+
+.lini{
+    border: 1px black solid;
+    margin: 0 auto;
 }
